<resources>
    <string name="app_name">AndroidDz.1</string>
    <string name="new_user_sign_up">NEW USER? SIGN UP</string>
    <string name="go">GO</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="hello_there_n_wellcome_back">HELLO THERE, \nWELLCOME BACK</string>
</resources>